--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     <p class="title is-3 mt-5 has-text-centered"> Image-to-3D </p>
     <video muted autoplay loop> <source src="videos/demo.mp4" type="video/mp4"> </video>
 
-    <p> </p>
+    <p class="big">
+    <br><br>
+    </p>
     <p class="title is-3 mt-5 has-text-centered"> Comparison </p>
     <video muted autoplay loop> <source src="videos/comparison.mp4" type="video/mp4"> </video>
     
