--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- paper title -->
     <p class="title is-3"> Fourier123: One Image to High-Quality 3D Object Generation with <br>Hybrid Fourier Score Distillation </p>
     <!-- publication -->
-    <p class="subtitle is-4"> NeurIPS 2024 submission</p>
+    <p class="subtitle is-4"> Arxiv 2024 </p>
     <!-- authors -->
     <p class="title is-5 mt-2">
       <a href="https://ysz2022.github.io/" target="_blank">Shuzhou Yang</a><sup>1,2</sup>,
