--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <model-viewer src="meshes/mario.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer src="meshes/shidiqi.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+        <model-viewer src="meshes/frog.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
       </div>
     </div>
     
