--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <model-viewer src="meshes/chocolatecake.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
       </div>
       <div class="level-item">
-        <model-viewer src="meshes/clock.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+        <model-viewer src="meshes/chairwatermelon.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer src="meshes/dola.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
