--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
     <p class="title is-3 mt-5 has-text-centered"> Comparison </p>
     <video muted autoplay loop> <source src="videos/comparison.mp4" type="video/mp4"> </video>
 
+    <p class="big">
+    <br><br>
+    </p>
+    
     <!-- 3d model viewer -->
     <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
     <div class="level">
