--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     </div>
     <div class="level">
       <div class="level-item">
-        <model-viewer src="meshes/girl.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+        <model-viewer src="meshes/cartoongirl.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer src="meshes/kun.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
