--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <!-- authors -->
     <p class="title is-5 mt-2">
       <a href="https://ysz2022.github.io/" target="_blank">Shuzhou Yang</a><sup>1,2</sup>,
-      <a href="https://fourier1-to-3.github.io/" target="_blank">Yu Wang</a><sup>1</sup>,
-      <a href="https://fourier1-to-3.github.io/" target="_blank">Haijie Li</a><sup>1</sup>,
+      <a href="https://villa.jianzhang.tech/people/yu-wang-%E6%B1%AA%E7%8E%89/" target="_blank">Yu Wang</a><sup>1</sup>,
+      <a href="https://villa.jianzhang.tech/people/haijie-li-%E6%9D%8E%E6%B5%B7%E6%9D%B0/" target="_blank">Haijie Li</a><sup>1</sup>,
       <a href="https://fourier1-to-3.github.io/" target="_blank">Jiarui Meng</a><sup>1</sup>,
       <a href="https://fourier1-to-3.github.io/" target="_blank">Xiandong Meng</a><sup>2</sup>,
       <a href="https://jianzhang.tech/" target="_blank">Jian Zhang</a><sup>1</sup>
@@ -34,7 +34,17 @@
       <sup>1</sup> Peking University &nbsp;
       <sup>2</sup> PengCheng Laboratory &nbsp;
     </p>
-   
+
+    <!-- other links -->
+    <div class="is-flex is-justify-content-center">
+      <span class="icon-text mx-1">
+        <a class="button is-dark" href="" role="button" target="_blank"> <span class="icon"> <ion-icon name="document-outline"></ion-icon> </span> <span> Arxiv </span>  </a> 
+      </span>
+      <span class="icon-text mx-1">
+        <a class="button is-dark" href="https://github.com/Ysz2022/Fourier123" role="button" target="_blank"> <span class="icon"> <ion-icon name="logo-github"></ion-icon> </span> <span> Code </span> </a> 
+      </span>
+    </div>
+    
   </div>
 
   <!-- main container -->
