--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <p class="title is-3 mt-5 has-text-centered"> Exported Meshes </p>
     <div class="level">
       <div class="level-item">
-        <model-viewer src="meshes/Transformer.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
+        <model-viewer src="meshes/broccoli.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
       </div>
       <div class="level-item">
         <model-viewer src="meshes/chocolatecake.glb" style="width: 100%; height: 300px;" auto-rotate shadow-intensity="1" camera-controls touch-action="pan-y"></model-viewer>
