--- a/index.html
+++ b/index.html
@@ -110,6 +110,19 @@
     </div>
     
     <!-- citation -->
+    <div class="card mt-4">
+      <header class="card-header">
+        <p class="card-header-title"> Citation </p>
+      </header>
+      <div class="card-content is-size-5 has-text-left">
+<pre><code>@article{yang2024fourier123,
+  title={Fourier123: One Image to High-Quality 3D Object Generation with Hybrid Fourier Score Distillation},
+  author={Shuzhou Yang and Yu Wang and Haijie Li and Jiarui Meng and Xiandong Meng and Jian Zhang},
+  journal={arXiv preprint arXiv:2405.20669},
+  year={2024}
+}</code></pre>
+      </div>
+    </div>
   </div>
 
 
