--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- affiliations -->
     <p class="subtitle is-5">
       <sup>1</sup> Peking University &nbsp;
-      <sup>2</sup> PengCheng Laboratory &nbsp;
+      <sup>2</sup> Pengcheng Laboratory &nbsp;
     </p>
 
     <!-- other links -->
