--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <a href="https://villa.jianzhang.tech/people/yu-wang-%E6%B1%AA%E7%8E%89/" target="_blank">Yu Wang</a><sup>1</sup>,
       <a href="https://villa.jianzhang.tech/people/haijie-li-%E6%9D%8E%E6%B5%B7%E6%9D%B0/" target="_blank">Haijie Li</a><sup>1</sup>,
       <a href="https://scholar.google.com/citations?user=N_pRAVAAAAAJ&hl=zh-CN" target="_blank">Jiarui Meng</a><sup>1</sup>,
+      <a href="https://scholar.google.com/citations?user=11sQNWwAAAAJ&hl=zh-CN&oi=ao" target="_blank">Yanmin Wu</a><sup>1</sup>,
       <a href="https://fourier1-to-3.github.io/" target="_blank">Xiandong Meng</a><sup>2</sup>,
       <a href="https://jianzhang.tech/" target="_blank">Jian Zhang</a><sup>1</sup>
     </p>
