--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- paper title -->
     <p class="title is-3"> Hybrid Fourier Score Distillation for Efficient One Image to 3D Object Generation </p>
     <!-- publication -->
-    <p class="subtitle is-4"> Arxiv 2024 </p>
+    <p class="subtitle is-4"> Visual Intelligence 2025 </p>
     <!-- authors -->
     <p class="title is-5 mt-2">
       <a href="https://ysz2022.github.io/" target="_blank">Shuzhou Yang</a><sup>1,2</sup>,
@@ -42,7 +42,7 @@
     <!-- other links -->
     <div class="is-flex is-justify-content-center">
       <span class="icon-text mx-1">
-        <a class="button is-dark" href="https://arxiv.org/abs/2405.20669" role="button" target="_blank"> <span class="icon"> <ion-icon name="document-outline"></ion-icon> </span> <span> Arxiv </span>  </a> 
+        <a class="button is-dark" href="https://link.springer.com/article/10.1007/s44267-025-00089-8" role="button" target="_blank"> <span class="icon"> <ion-icon name="document-outline"></ion-icon> </span> <span> Paper </span>  </a> 
       </span>
       <span class="icon-text mx-1">
         <a class="button is-dark" href="https://github.com/Ysz2022/Fourier123" role="button" target="_blank"> <span class="icon"> <ion-icon name="logo-github"></ion-icon> </span> <span> Code </span> </a> 
