--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
         <p class="card-header-title"> Citation </p>
       </header>
       <div class="card-content is-size-5 has-text-left">
-<pre><code>@article{yang2024fourier123,
-  title={Fourier123: One Image to High-Quality 3D Object Generation with Hybrid Fourier Score Distillation},
-  author={Shuzhou Yang and Yu Wang and Haijie Li and Jiarui Meng and Xiandong Meng and Jian Zhang},
-  journal={arXiv preprint arXiv:2405.20669},
-  year={2024}
+<pre><code>@article{f123,
+	title        = {Hybrid Fourier score distillation for efficient one image to 3D object generation},
+	author       = {Shuzhou Yang and Yu Wang and Haijie Li and Jiarui Meng and Yanmin Wu and Xiandong Meng and Jian Zhang},
+	year         = {2025},
+	journal      = {Visual Intelligence (VI)}
 }</code></pre>
       </div>
     </div>
