--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <!-- other links -->
     <div class="is-flex is-justify-content-center">
       <span class="icon-text mx-1">
-        <a class="button is-dark" href="https://arxiv.org/abs/2405.20669" role="button" target="_blank"> <span class="logo-arxiv"> <ion-icon name="document-outline"></ion-icon> </span> <span> arXiv </span>  </a> 
+        <a class="button is-dark" href="https://arxiv.org/abs/2405.20669" role="button" target="_blank"> <span class="icon"> <ion-icon name="logo-arxiv"></ion-icon> </span> <span> arXiv </span>  </a> 
       </span>
       <span class="icon-text mx-1">
         <a class="button is-dark" href="https://link.springer.com/article/10.1007/s44267-025-00089-8" role="button" target="_blank"> <span class="icon"> <ion-icon name="document-outline"></ion-icon> </span> <span> Paper </span>  </a> 
